<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Theme.MockMerchantApplication">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_bar_title"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_vpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_vpa_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_vpa_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_vpa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_name_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_name_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_vpa">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .'-"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_mcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_mcc_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_mcc_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_mcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_transaction_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/transaction_id_label"
                app:endIconContentDescription="@string/transaction_id_end_icon_content_description"
                app:endIconDrawable="@drawable/refresh_24px"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:helperText="@string/transaction_id_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_mcc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_transaction_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:maxLength="35"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_transaction_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/transaction_reference_label"
                app:endIconContentDescription="@string/transaction_end_icon_content_description"
                app:endIconDrawable="@drawable/refresh_24px"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:helperText="@string/transaction_reference_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_transaction_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_transaction_reference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_transaction_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/transaction_note_label"
                app:counterEnabled="true"
                app:counterMaxLength="280"
                app:errorEnabled="true"
                app:helperText="@string/transaction_note_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_transaction_reference">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_transaction_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine|textNoSuggestions"
                    android:maxLength="280"
                    android:maxLines="6"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_amount_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_amount_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_transaction_note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_currency"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_currency_label"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true"
                app:helperText="@string/payee_currency_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_amount">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/materialAutoCompleteTextView_payee_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_app_id_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_app_id_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_currency">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_app_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz0123456789._"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/payee_app_id_text" />                 <!-- Prefill here -->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_payee_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/payee_app_name_label"
                app:errorEnabled="true"
                app:helperText="@string/payee_app_name_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_payee_app_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_payee_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textAutoComplete"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/payee_app_name_text" />                 <!-- Prefill here -->
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:enabled="false"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/materialButton_make_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>